# matrix

./: .gitignore  Cargo.toml  data.db  docker-compose.yml  start.sh
coin_pool_cache/: latest.json
docker/: Dockerfile.backend
logs/: MATRIX.log.2026-01-23-16
src/: main.rs
src/api/: Cargo.toml
src/api/src/: backtest.rs  crypto_handler.rs  lib.rs  server.rs  strategy.rs  utils.rs
src/auth/: Cargo.toml
src/auth/src/: jwt_auth.rs
src/backtest/: Cargo.toml
src/backtest/src/: account.rs  ai_client.rs  aicache.rs  config.rs  datafeed.rs  equity.rs  lib.rs  lock.rs  manager.rs  metrics.rs  persistence_db.rs  registry.rs  retention.rs  runner.rs  storage.rs  storage_db_impl.rs  types.rs
src/config/: Cargo.toml
src/config/src/: config.rs
src/crypto/: Cargo.toml
src/crypto/src/: crypto.rs
src/decision/: Cargo.toml
src/decision/src/: engine.rs  lib.rs  prompt_manager.rs  strategy_engine.rs
src/hook/: Cargo.toml
src/hook/src/: api_hook.rs  http_client_hook.rs  ip_hook.rs  lib.rs  trader_hook.rs
src/logger/: Cargo.toml
src/logger/src/: config.rs  logger.rs
src/manager/: Cargo.toml
src/manager/src/: lib.rs  trader_manager.rs
src/market/: Cargo.toml
src/market/src/: api_client.rs  combined_streams.rs  data.rs  historical.rs  lib.rs  monitor.rs  timeframe.rs  types.rs  websocket_client.rs
src/mcp/: Cargo.toml
src/mcp/src/: builder.rs  client.rs  config.rs  custom_client.rs  deepseek_client.rs  lib.rs  qwen_client.rs  request.rs  request_builder.rs
src/pool/: Cargo.toml
src/pool/src/: coin_pool.rs  lib.rs
src/store/: Cargo.toml
src/store/src/: ai_model.rs  backtest.rs  decision.rs  equity.rs  exchange.rs  lib.rs  order.rs  position.rs  store.rs  strategy.rs  trader.rs  user.rs
src/trader/: Cargo.toml  TESTING.md
src/trader/examples/: test_orders.rs
src/trader/src/: aster_trader.rs  auto_trader.rs  binance_futures.rs  hyperliquid_trader.rs  lib.rs
web/src/: App.tsx
web/src/components/: EquityChart.tsx  ErrorBoundary.tsx  ModelIcons.tsx
web/src/components/traders/: ModelConfigModal.tsx
web/src/components/traders/sections/: AIModelsSection.tsx
