[package]
name = "matrix"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
dotenvy = "0.15"
tokio.workspace = true
tracing.workspace = true

api = { path = "src/api" }
auth = { path = "src/auth" }
backtest = { path = "src/backtest" }
config_lib = { path = "src/config", package = "config" }
crypto = { path = "src/crypto" }
decision = { path = "src/decision" }
hook = { path = "src/hook" }
logger = { path = "src/logger" }
manager = { path = "src/manager" }
market = { path = "src/market" }
mcp = { path = "src/mcp" }
pool = { path = "src/pool" }
store = { path = "src/store" }
trader = { path = "src/trader" }

[workspace]
members = [
    "src/api",
    "src/auth",
    "src/backtest",
    "src/config",
    "src/crypto",
    "src/decision",
    "src/hook",
    "src/logger",
    "src/manager",
    "src/market",
    "src/mcp",
    "src/pool",
    "src/store",
    "src/trader",
]

[workspace.dependencies]
futures = "0.3.31"
tower-http = { version = "0.5", features = ["cors"] }
env_logger = "0.11.8"
anyhow = "1.0"
axum = "0.8.7"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.2"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
totp-rs = { version = "5.5", features = ["qr", "otpauth", "gen_secret"] }
dotenvy = "0.15"
rsa = "0.9"           # For RSA-OAEP decryption
aes-gcm = "0.10"      # For AES-GCM encryption/decryption
sha2 = "0.10"         # For SHA256 hashing (OAEP)
base64 = "0.21"       # For Base64 encoding/decryption
hex = "0.4"           # For Hex decoding
pkcs8 = { version = "0.10", features = ["std", "pem"] } # For parsing keys
pkcs1 = { version = "0.7", features = ["std", "pem"] }  # For parsing RSA PKCS1 keys
rand = "0.8"          # For random nonce/key generation
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "*"
hostname = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
url = "2.4"
reqwest = { version = "0.11", features = ["json", "blocking"] }
dashmap = "5.5"
once_cell = "1.18"
binance = "0.21.2"
async-trait = "0.1"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "chrono"] }
data-encoding = "2"
ethers = { version = "2.0", features = ["legacy"] }
async-recursion = "1.0"
hyperliquid_rust_sdk = { git = "https://github.com/hyperliquid-dex/hyperliquid-rust-sdk", branch = "master" }
alloy = { version = "1.0", default-features = false, features = [
  "dyn-abi",
  "sol-types",
  "signer-local",
] }
regex = "1.12.2"
zip = "7"
tempfile = "3.24.0"
tokio-util = "0.7.17"
walkdir = "2.5.0"
uuid = "1.19.0"
validator = { version = "0.16", features = ["derive"] }
if-addrs = "0.10"
