[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
auth = { path = "../auth" }
backtest = { path = "../backtest" }
config = { path = "../config" }
crypto = { path = "../crypto" }
decision = { path = "../decision" }
logger = {  path = "../logger" } 
manager = { path = "../manager" }
store = { path = "../store" }
trader = { path = "../trader" }

serde_json.workspace = true
serde.workspace = true
axum.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace =true
chrono.workspace = true
tower-http.workspace = true
tokio.workspace = true
validator.workspace = true
uuid.workspace = true
reqwest.workspace = true
futures.workspace = true
if-addrs.workspace = true
