[package]
name = "backtest"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
hex.workspace = true
hostname.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true
walkdir.workspace = true
zip.workspace = true

decision = { path = "../decision" }
market = { path = "../market" }
mcp = { path = "../mcp" }
pool = { path = "../pool" }
store = { path = "../store" }