[package]
name = "crypto"
version = "0.1.0"
edition = "2024"

[dependencies]
rsa.workspace = true
aes-gcm.workspace = true
sha2.workspace = true
base64.workspace = true
hex.workspace = true
pkcs8.workspace = true
pkcs1.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
dotenvy.workspace = true
chrono.workspace = true
thiserror.workspace = true