[package]
name = "crypto"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm.workspace = true
base64.workspace = true
chrono.workspace = true
dotenvy.workspace = true
hex.workspace = true
pkcs1.workspace = true
pkcs8.workspace = true
rand.workspace = true
rsa.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
