[package]
name = "decision"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
market = { path = "../market" }
mcp = { path = "../mcp" }
pool = { path = "../pool" }
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
store = { path = "../store" }
tracing.workspace = true
