[package]
name = "market"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
log.workspace = true
url.workspace = true
reqwest.workspace = true
dashmap.workspace = true
once_cell.workspace = true
tracing.workspace = true

logger = { path = "../logger" }
