[package]
name = "mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
log.workspace = true
thiserror.workspace = true
async-trait.workspace = true
env_logger.workspace = true
