[package]
name = "store"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
tokio.workspace = true
rand.workspace  = true
data-encoding.workspace = true

logger = { path = "../logger" }
