[package]
name = "trader"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
ethers.workspace = true
hex.workspace = true
chrono.workspace = true
anyhow.workspace = true
async-recursion.workspace = true
async-trait.workspace = true
binance.workspace = true
rand.workspace = true
hyperliquid_rust_sdk.workspace = true
alloy.workspace = true
tracing.workspace = true

hook = { path = "../hook" }
store = { path = "../store" }
mcp = { path = "../mcp" }
decision = { path = "../decision" }
market = { path = "../market" }
pool = { path = "../pool" }
